--- a/more.html
+++ b/more.html
@@ -18,8 +18,9 @@
   <div class="content">
     <header>
       <h2>To My Pyari Ishuuu💝 </h2>
-      <h4>Jab bhi tu hasti hai na, lagta
-        hai sab kuch theek hai!</h4>
+      <h4>Humesha Khush raha kariye,
+        aapke khushi me hi meri khushi
+        h💖</h4>
     </header>
     <main
       style="text-align: center; color: white; padding: 20px;">
@@ -30,21 +31,25 @@
         se bhar gayi hai.
       </p>
       <p style="font-size: 18px;">
-        Tere chehre ki muskan mere liye
-        ek dua ki tarah hai, jo har din
-        meri zindagi mein sukoon bhar
-        deti hai.
+        Me apko wo pyaar aur khushi dena
+        chahta hun jo aap deserve krti
+        hai, aapko pane ke liye jo kar
+        saka wo karunga💟♥️
       </p>
       <p style="font-size: 18px;">
-        Har lamha jo tere saath guzarta
-        hai, woh mere dil ke sabse
-        khoobsurat kone mein hamesha ke
-        liye bas gaya hai.
+        Me janta hun har kisi pe trust
+        krna asaan nhi, kuchh log hote h
+        jo ise aur mushkil kar dete,
+        par me aapke khushi ka wajah
+        banna chahta hun, aapko irritate
+        bhi karna chahta hun, aur aapke
+        dukh me aapke sath rehna chahta
+        hun.🍂
       </p>
       <p style="font-size: 18px;">I love
-        you, Isha. Hamesha.
+        you, Isha. forever.
         <br> From: Syed Ayatullah
-        Kareem💓
+        Kareem💓.
       </p>
     </main>
   </div>
